# epi_center

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.new  Dockerfile.simple  Dockerfile.slim  GKE.md  Procfile  README.md  TO_DO.md  analysis_python.ipynb  docker-compose.yml  names.csv  org_chart.csv  org_structure.csv  people.csv
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: analysis_python-checkpoint.ipynb
gke-k8s/: README.md  api-config.yaml  api.yaml  ingress.yaml  payload.json.notyaml  postgres-volume.yaml  postgres-volume.yaml.NOT  postgres.yaml
kubernetes/: README.md  deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml  volume.yaml
migrations/2021-09-11-192223_add_base_models/: down.sql  up.sql
migrations/2023-03-03-185915_create_publications/: down.sql  up.sql
orgchart/: Dockerfile  README.md  package-lock.json  package.json
orgchart/public/: index.html
orgchart/src/: App.tsx  index.tsx
seeds/: extra_names.csv  names.csv  org_structure.csv
src/: common_utils.rs  database.rs  lib.rs  main.rs  schema.rs
src/database/: admin_operations.rs  database.rs  dummy_capability_data.rs  dummy_data.rs  dummy_org_data.rs  dummy_publications.rs  dummy_tasks.rs  mod.rs
src/graphql/: mutation.rs  query.rs  utilities.rs
src/handlers/: base.rs  endpoints.rs  mod.rs  routes.rs
src/models/: _to_implement.rs  affiliation.rs  auth.rs  authentication.rs  capability.rs  credential.rs  email.rs  language.rs  messages.rs  mod copy.rs  mod.rs  org_ownership.rs  org_tier.rs  organization.rs  person.rs  publication.rs  publication_contributor.rs  reporting_relationship.rs  requirement.rs  (+8 more)
static/: pieChart.js
templates/: index.html  org_chart.html
(+19 files in other folders)
