[package]
name = "people_data_api"
version = "0.2.1"
authors = ["christopherallison <cgeist7@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
actix-rt = "2.10.0"
actix-multipart = "0.7.2"
actix-service = "2.0.3"
actix-files = "0.6.6"

async-graphql = { version = "7.0.17", features = ["uuid", "chrono", "chrono-tz", "graphiql"] }
async-graphql-actix-web = "7.0.17"

argon2rs = "0.2"
argonautica = "0.2.0"
jsonwebtoken = "7.2.0"
strum = "0.23.0"
strum_macros = "0.23.1"

chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "uuid", "r2d2", "chrono", "uuid", "serde_json"]}
r2d2 = "0.8.10"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"]}
diesel_migrations = "2.2.0"

uuid = { version = "1.17.0", features = ["serde", "v4"]}
lazy_static = "1.5"
proc-macro2 = "1"
csv = "1.2.0"
async-trait = "0.1.88"

dotenv = "0.15.0"
futures = "0.3.17"
# rdkafka = { version = "0.28.0", features = ["cmake-build", "ssl-vendored"]}
async-stream = "0.3.2"

serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0"
derive_more = "0.99.5"
serde_json = "1.0"
shrinkwraprs = "0.3.0"

rand = "0.8.4"

alcoholic_jwt = "1.0.0"
reqwest = { version = "0.11.7", features = ["json"] }
env_logger = "0.9.0"
bytes = "1.1.0"

graphql_client = "0.14.0"
dataloader = "0.14"

tera = "1.3.0"
tera-text-filters = "1.0"

Inflector = "0.11.4"
calamine = "0.18.0"
actix-cors = "0.6.4"

[build-dependencies]
static-files = "0.2.1"
